resubmit the module 2 hw

--- a/site/mod2_solution/index.html
+++ b/site/mod2_solution/index.html
@@ -10,22 +10,24 @@
 <body>
 	<h1>Our Menu</h1>
 
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-4 col-md-6">
+			<section class="col-lg-4 col-md-6">
+				<div>
 				<p id="p2">Chicken</p>
-				<p id="p1">Chicken - This is the menu about the Chicken related dishes</p>
-			</div>
-			<div class="col-lg-4 col-md-6">
+				<p id="p1">Iorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</div>
+			</section>
+			<section class="col-lg-4 col-md-6">
+				<div>
 				<p id="p3">Beef</p>
-				<p id="p1">Beef - This is the menu about the Beef related dishes</p>
-			</div>
-			<div class="col-lg-4 col-md-12">
+				<p id="p1">Iorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</div>
+			</section>
+			<section class="col-lg-4 col-md-12">
+				<div>
 				<p id="p4">Sushi</p>
-				<p id="p1">Sushi - This is the menu about the Sushi related dishes</p>
-			</div>
-		</div>
-	</div>
+				<p id="p1">Iorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</div>
+			</section>
 </body>
 
 </html>
